<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="3">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@drawable/bg_welcome"
        android:padding="20dp">

        <LinearLayout
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_countrytext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/darkBlue"
                    android:textStyle="bold"
                    android:textSize="25sp"/>

                <TextView
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="25sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/france"
                    android:textColor="@color/darkRed"
                    android:textStyle="bold"
                    android:textSize="25sp" />

            </LinearLayout>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pleaseLoginToContinue"
                android:textColor="@color/white" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.2"
        android:background="@color/bg"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/textColor" />


        <RelativeLayout
            android:id="@+id/rlSignInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/white_bg_gray_border_corner"
            android:padding="15dp">

            <EditText
                android:id="@+id/etSignInEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/ivSignInEmailCheck"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:hint="@string/enterYourEmailID" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/ivSignInEmailCheck"
                style="@style/checkIcon"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_check" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/password"
            android:textColor="@color/textColor" />

        <RelativeLayout
            android:id="@+id/rlSignInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/white_bg_gray_border_corner"
            android:padding="15dp">

            <EditText
                android:id="@+id/etSignInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_toStartOf="@+id/ivSignInPasswordCheck"
                android:background="@android:color/transparent"
                android:hint="@string/enterPassword" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/ivSignInPasswordCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_check" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/forgetPassword"
            android:visibility="invisible"
            android:textColor="@color/lineBlue" />

        <RelativeLayout
            android:id="@+id/rlBtnSignIn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_blue"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/signInArrow"
                android:gravity="center"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/signInArrow"
                style="@style/arrowIcon"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:background="@drawable/white_bg_gray_border_corner"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSignInJoinUs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/joinUs"
            android:textAllCaps="false"
            android:textColor="@color/textColor" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/lightTextColor" />

        <TextView
            android:id="@+id/tvSigInSkip"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/skipThisStep"
            android:textAllCaps="false"
            android:textColor="@color/textColor" />

    </LinearLayout>

</LinearLayout>