<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarJoinUs"
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullName"
            android:textColor="@color/textColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/white_bg_gray_border_corner"
            android:padding="10dp">

            <EditText
                android:id="@+id/etJoinName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/ivSignInNameCheck"
                android:background="@android:color/transparent"
                android:hint="@string/enterYourName"
                android:inputType="text"/>

            <ImageView
                android:id="@+id/ivSignInNameCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_check"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/emailIID"
            android:textColor="@color/textColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/white_bg_gray_border_corner"
            android:padding="10dp">

            <EditText
                android:id="@+id/etJoinEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/ivSignInEmailCheck"
                android:background="@android:color/transparent"
                android:hint="@string/enterYourEmailID" />

            <ImageView
                android:id="@+id/ivSignInEmailCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_check"
                android:visibility="gone" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/phoneNo"
            android:textColor="@color/textColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/white_bg_gray_border_corner"
            android:padding="10dp">

            <EditText
                android:id="@+id/etJoinContactNo"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/ivSignInPhoneCheck"
                android:background="@android:color/transparent"
                android:hint="@string/enterPhoneNo" />

            <ImageView
                android:id="@+id/ivSignInPhoneCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_check"
                android:visibility="gone" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/joinAs"
            android:textColor="@color/textColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/white_bg_gray_border_corner"
            android:padding="10dp">

            <Spinner
                android:id="@+id/spinnerJoinUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:entries="@array/joinas_arrays" />

            <ImageView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_spinner_arrow" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/licenseNo"
            android:textColor="@color/textColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/white_bg_gray_border_corner"
            android:padding="10dp">

            <EditText
                android:id="@+id/etJoinLicenseNo"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/ivSignInPasswordCheck"
                android:background="@android:color/transparent"
                android:hint="@string/enterLicense" />

            <ImageView
                android:id="@+id/ivSignInPasswordCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_check"
                android:visibility="gone" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlBtnJoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_blue"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/signInArrow"
                android:gravity="center"
                android:text="@string/join"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/signInArrow"
                style="@style/arrowIcon"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>